; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_codepage.c_test_null_source.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_codepage.c_test_null_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@ERROR_INVALID_PARAMETER = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [87 x i8] c"WideCharToMultiByte returned %d with GLE=%u (expected 0 with ERROR_INVALID_PARAMETER)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_null_source to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_null_source() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = call i32 @SetLastError(i32 0)
  %4 = load i32, i32* @CP_ACP, align 4
  %5 = call i32 @WideCharToMultiByte(i32 %4, i32 0, i32* null, i32 0, i32* null, i32 0, i32* null, i32* null)
  store i32 %5, i32* %1, align 4
  %6 = call i64 (...) @GetLastError()
  store i64 %6, i64* %2, align 8
  %7 = load i32, i32* %1, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %0
  %10 = load i64, i64* %2, align 8
  %11 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  %12 = icmp eq i64 %10, %11
  br label %13

13:                                               ; preds = %9, %0
  %14 = phi i1 [ false, %0 ], [ %12, %9 ]
  %15 = zext i1 %14 to i32
  %16 = load i32, i32* %1, align 4
  %17 = load i64, i64* %2, align 8
  %18 = call i32 @ok(i32 %15, i8* getelementptr inbounds ([87 x i8], [87 x i8]* @.str, i64 0, i64 0), i32 %16, i64 %17)
  %19 = call i32 @SetLastError(i32 0)
  %20 = load i32, i32* @CP_ACP, align 4
  %21 = call i32 @WideCharToMultiByte(i32 %20, i32 0, i32* null, i32 -1, i32* null, i32 0, i32* null, i32* null)
  store i32 %21, i32* %1, align 4
  %22 = call i64 (...) @GetLastError()
  store i64 %22, i64* %2, align 8
  %23 = load i32, i32* %1, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %29, label %25

25:                                               ; preds = %13
  %26 = load i64, i64* %2, align 8
  %27 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  %28 = icmp eq i64 %26, %27
  br label %29

29:                                               ; preds = %25, %13
  %30 = phi i1 [ false, %13 ], [ %28, %25 ]
  %31 = zext i1 %30 to i32
  %32 = load i32, i32* %1, align 4
  %33 = load i64, i64* %2, align 8
  %34 = call i32 @ok(i32 %31, i8* getelementptr inbounds ([87 x i8], [87 x i8]* @.str, i64 0, i64 0), i32 %32, i64 %33)
  ret void
}

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32*, i32, i32*, i32, i32*, i32*) #1

declare dso_local i64 @GetLastError(...) #1

declare dso_local i32 @ok(i32, i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
